2010-06-21  Dan Nicolaescu  <dann@ics.uci.edu>

	Fix reading file names in Git annotate buffers.
	* vc-git.el (vc-git-annotate-extract-revision-at-line): Remove
	trailing whitespace.  Suggested by Eric Hanchrow.  (Bug#6481)

2010-06-20  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-mode.el (c-before-hack-hook): When the mode is set
	in file local variables, set it first.

2010-06-19  Glenn Morris  <rgm@gnu.org>

	* descr-text.el (describe-char-unicode-data): Insert separating
	space when needed.  (Bug#6422)

	* progmodes/idlwave.el (idlwave-action-and-binding):
	Fix typo in 2009-12-03 change.  (Bug#6450)

2010-06-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (read-quoted-char): Fix up last change (bug#6290).

2010-06-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* font-lock.el (font-lock-major-mode): Rename from
	font-lock-mode-major-mode to distinguish it from
	global-font-lock-mode's own font-lock-mode-major-mode (bug#6135).
	(font-lock-set-defaults):
	* font-core.el (font-lock-default-function): Adjust users.
	(font-lock-mode): Don't set it at all.

2010-06-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-annotate.el (vc-annotate): Use vc-read-revision.

2010-06-15  Glenn Morris  <rgm@gnu.org>

	* calendar/appt.el (appt-time-msg-list): Doc fix.
	(appt-check): Let-bind appt-warn-time.
	(appt-add): Make the 3rd argument optional.
	Simplify argument names.  Doc fix.  Check for integer WARNTIME.
	Only add WARNTIME to the output list if non-nil.

2010-06-15  Ivan Kanis  <apple@kanis.eu>

	* calendar/appt.el (appt-check): Let the 3rd element of
	appt-time-msg-list specify the warning time.
	(appt-add): Add new argument with the warning time.  (Bug#5176)

2010-06-12  Bob Rogers  <rogers-emacs@rgrjr.dyndns.org>  (tiny change)

	* vc-svn.el (vc-svn-after-dir-status): Fix regexp for Subversions
	older than version 1.6.  (Bug#6361)

2010-06-12  Helmut Eller  <eller.helmut@gmail.com>

	* emacs-lisp/cl-macs.el (destructuring-bind): Bind `bind-enquote',